# Fuck-PTSD

./: .clang-format  .codespell_ignore  .gitignore  .gitmodules  .prettierrc.yaml  CMakeLists.txt  Doxyfile  Doxygen.config  LICENSE  README.md  config.json  files.cmake  run_clang_format.bat  run_clang_format.sh
.github/workflows/: build-test.yml  build.yml  clang-tidy-check.yml  main.yml  multi_system.yml
assets/dungeon/: MY DUNGEON.xml  boss_room.xml  lobby.xml  test.xml
assets/font/necrosans/: license.txt  readme.txt
assets/font/necrosans-18/: license.txt  readme.txt
assets/font/necrosans-6/: license.txt  readme.txt
assets/level/: test.xml
assets/music/: boss_1.txt  lobby.txt  zone1_1.txt  zone1_2.txt  zone1_3.txt
cmake/: Dependencies.cmake  Rust.cmake
html/: AStar_8cpp.html  AStar_8cpp__incl.map  AStar_8cpp__incl.md5  AStar_8h.html  AStar_8h__dep__incl.map  AStar_8h__dep__incl.md5  AStar_8h__incl.map  AStar_8h__incl.md5  AStar_8h_source.html  Actions_8h.html  Actions_8h__dep__incl.map  Actions_8h__dep__incl.md5  Actions_8h__incl.map  Actions_8h__incl.md5  Actions_8h_source.html  Animation_8cpp.html  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8h.html  Animation_8h__dep__incl.map  Animation_8h__dep__incl.md5  Animation_8h__incl.map  Animation_8h__incl.md5  Animation_8h_source.html  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8hpp.html  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  Background_8cpp.html  Background_8cpp__incl.map  Background_8cpp__incl.md5  Background_8hpp.html  Background_8hpp__dep__incl.map  Background_8hpp__dep__incl.md5  Background_8hpp__incl.map  (+1513 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+105 more)
include/: App.hpp  Background.hpp  GlobalType.h  pch_extream.h  pch_extreme.h
include/App/: App.hpp
include/Character/: Character.hpp  Coin.h  Diamond.h  GameElement.h  Heart.h  MainCharacter.h  Protagonist.h  Role.h  Tools.h
include/Display/: BeatHeart.h  BeatIndicator.h  Helper.h  Window.h
include/Dungeon/: AStar.h  ColorCube.h  Direction.h  Dungeon_config.h  EMfwd.h  Elements.h  Enemy.h  EnemyFactory.h  Item.h  Level.h  Map.h  MapData.h  MapEvent.h  MapHandler.h  MapSimpleData.h  MiniMap.h  Minimap.h  SimpleMapData.h  Tile.h  TileFactory.h
include/Dungeon/Enemies/: Bat.h  BlueSlime.h  CSnake.h  DragonGreen.h  Ghost.h  GreenSlime.h  Green_Slime.h  KingConga.h  KingCongaBridge.h  Minotaur.h  Monkey.h  OrangeSlime.h  RedBat.h  Shopkeeper.h  Skeleton.h  Wraith.h  Zombie.h
include/Dungeon/Tiles/: ConductorWallPipe.h  DoorMetalFront.h  DoorMetalSide.h  FloorTar.h  GeneralDoor.h  GeneralDoorFront.h  GeneralDoorSide.h  GeneralFloor.h  GeneralTool.h  GeneralWall.h  NecroDancerStage.h  (+3 more)
include/Event/: Event.h  EventArgs.h  EventHandler.h  EventType.h  Object.h
include/Game/: Actions.h  Animation.h  Begin.h  Camera.h  Character.hpp  Config.h  Game_config.h  Mapper.h  Player.h  Player_config.h  README.md  System.h  Throw.hpp  ToolBoxs.h
include/Music/: BeatHeart.h  BeatIndicator.h  Display.h  Helper.h  IndicatorBar.h  Music.h  Music_config.h  Player.h  RhythmIndicator.h  Tempo.h
include/Player/: Config.h  Player.h  Player_Config.h
include/Settings/: Animation.h  Background.hpp  Camera.h  Character.hpp  DeadScreen.h  Event.h  EventHandler.h  GameElement.h  Hash.h  Helper.hpp  PlaybackSpeedEffectHandler.h  PollHandler.h  SpriteSheet.hpp  ThreadPool.h  ToolBoxs.h  UGameElement.h  Window.hpp  music.h
include/SubWindow/: DebugSystem.h
include/Tools/: Attack.h  Bomb.h  Equipment.h  IEquipment.h  Shovel.h  Throw.h  Weapon.h
include/music/: music.h
latex/: AStar_8cpp.tex  AStar_8cpp__incl.md5  AStar_8h.tex  AStar_8h__dep__incl.md5  AStar_8h__incl.md5  Actions_8h.tex  Actions_8h__dep__incl.md5  Actions_8h__incl.md5  Animation_8cpp.tex  Animation_8cpp__incl.md5  Animation_8h.tex  Animation_8h__dep__incl.md5  Animation_8h__incl.md5  App_8cpp.tex  App_8cpp__incl.md5  App_8hpp.tex  App_8hpp__dep__incl.md5  App_8hpp__incl.md5  Background_8cpp.tex  Background_8cpp__incl.md5  Background_8hpp.tex  Background_8hpp__dep__incl.md5  Background_8hpp__incl.md5  Base_8h.tex  Base_8h__dep__incl.md5  Base_8h__incl.md5  Bat_8cpp.tex  Bat_8cpp__incl.md5  Bat_8h.tex  Bat_8h__dep__incl.md5  Bat_8h__incl.md5  BeatHeart_8cpp.tex  BeatHeart_8cpp__incl.md5  BeatHeart_8h.tex  BeatHeart_8h__dep__incl.md5  BeatHeart_8h__incl.md5  BeatIndicator_8h.tex  BeatIndicator_8h__incl.md5  Begin_8h.tex  Begin_8h__dep__incl.md5  (+680 more)
lib/rusty_code/: Cargo.toml
libs/: Background.cpp
src/: App.cpp  AppComplete.cpp  Character.cpp  ClickEvent.cpp  End.cpp  Start.cpp  Update.cpp  initialGame.cpp  main.cpp  test.xml
src/Character/: Character.cpp  Coin.cpp  Diamond.cpp  GameElement.cpp  Heart.cpp  MainCharacter.cpp  Protagonist.cpp  Role.cpp  Tools.cpp
src/Display/: BeatHeart.cpp  BeatIndicator.cpp
src/Dungeon/: AStar.cpp  ColorCube.cpp  Enemy.cpp  Level.cpp  Map.cpp  MapData.cpp  MapEvent.cpp  MapHandler.cpp  MiniMap.cpp  SimpleMapData.cpp  Tile.cpp  necroedit.res
src/Event/: Event.cpp  EventHandler.cpp
src/Game/: Animation.cpp  Begin.cpp  Camera.cpp  Player.cpp  System.cpp  ToolBoxs.cpp
src/Music/: BeatHeart.cpp  Display.cpp  IndicatorBar.cpp  Music.cpp  Player.cpp  RhythmIndicator.cpp  Tempo.cpp
src/Player/: Player.cpp
src/Settings/: Animation.cpp  Background.cpp  Camera.cpp  Character.cpp  DeadScreen.cpp  GameElement.cpp  Hash.cpp  Helper.cpp  PollHandler.cpp  SpriteSheet.cpp  ToolBoxs.cpp  Windows.cpp  music.cpp
src/SubWindow/: DebugWindow.cpp
src/Tools/: Attack.cpp  Bomb.cpp  Shovel.cpp  Throw.cpp  Weapon.cpp
src/music/: music.cpp
(+142 files in other folders)
